# GBEmu-Vita

./: CMakeLists.txt  README.md
include/: bus.h  cart.h  common.h  cpu.h  emu.h  instructions.h  log.h
lib/: bus.c  cart.c  cpu.c  cpu_fetch.c  cpu_proc.c  cpu_util.c  emu.c  instructions.c  log.c
src/: main.c
